Revert "Drop JDK6, JDK7 and Scala 2.10"
This reverts commit 287b3eede024c128245b180ab24ed6e672088bca.

Conflicts:
	build.gradle
	pact-jvm-consumer-groovy/build.gradle
	pact-jvm-consumer-junit/src/main/java/au/com/dius/pact/consumer/PactRule.java
	pact-jvm-model-v3/build.gradle
	pact-jvm-provider-maven/build.gradle
	project/Build.scala
	settings.gradle