@@ -10,7 +10,8 @@ buildscript {
 subprojects {
 
     def scalaVersionLookup = [
-        '2.11': '2.11.7'
+        '2.10': '2.10.5',
+        '2.11': '2.11.6'
     ]
 
     def m = project.name =~ /.*_(2\.1\d)(_0\.\d+)?/
@@ -18,6 +19,7 @@ subprojects {
       project.ext {
           scalaVersion = m.group(1)
           scalaFullVersion = scalaVersionLookup[m.group(1)]
+          sbtVersion = '0.13.5'
       }
 
       buildDir = new File(projectDir, "build/$project.scalaVersion")
@@ -38,33 +40,31 @@ subprojects {
     dependencies {
       if (project.hasProperty('scalaVersion')) {
           compile 'org.slf4j:slf4j-api:1.7.7', "org.scala-lang:scala-library:${project.scalaFullVersion}",
-                  "com.typesafe.scala-logging:scala-logging_${project.scalaVersion}:3.1.0",
                   "org.json4s:json4s-native_${project.scalaVersion}:3.2.11",
                   "org.json4s:json4s-jackson_${project.scalaVersion}:3.2.11"
           testCompile "org.specs2:specs2_${project.scalaVersion}:2.3.13"
 
-          compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
+          if (project.scalaVersion == '2.11') {
+              compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
+          }
       }
 
       testCompile 'org.hamcrest:hamcrest-all:1.3', 'org.mockito:mockito-core:1.9.5', 'junit:junit:4.12'
     }
 
     group = 'au.com.dius'
-    version = '3.0.1'
-    targetCompatibility = '1.8'
-    sourceCompatibility = '1.8'
+    version = '2.2.11'
+    targetCompatibility = '1.6'
+    sourceCompatibility = '1.6'
 
     tasks.withType(ScalaCompile) {
         scalaCompileOptions.useCompileDaemon = false
         scalaCompileOptions.useAnt = false
-        scalaCompileOptions.additionalParameters = ['-target:jvm-1.8']
+        scalaCompileOptions.additionalParameters = ['-target:jvm-1.6']
         configure(scalaCompileOptions.forkOptions) {
-          memoryMaximumSize = '700m'
+          memoryMaximumSize = '1g'
+          jvmArgs = ['-XX:MaxPermSize=512m']
         }
-    }
-
-    tasks.withType(GroovyCompile) {
-      groovyOptions.optimizationOptions.indy = true
     }
 
     jar {
